@@ -1,5 +1,5 @@
 /*  Functions from hack's utils library.
-    Copyright (C) 1989, 1990, 1991, 1998, 1999, 2003, 2008
+    Copyright (C) 1989, 1990, 1991, 1998, 1999, 2003, 2008, 2009
     Free Software Foundation, Inc.
 
     This program is free software; you can redistribute it and/or modify
